--- a/src/css/custom/buttons.styl
+++ b/src/css/custom/buttons.styl
@@ -7,7 +7,7 @@ $button-reset
 	font-family: $font-family
 	text-align: center
 	display: inline-block
-	transition: all 0.2s
+	transition: background .2s ease-in, color .2s ease-in
 	text-decoration: none
 $button-disabled
 	background-color: $disabled-color
