--- a/views/stats.pug
+++ b/views/stats.pug
@@ -55,7 +55,7 @@ block content
 				.drop-down_current(role="button")
 					span.value All
 					.drop-down_list
-						ul
+						ul.check-list
 							li(role="option")
 								.form_checkbox-wrapper
 									input(type="checkbox", name="season", id="season_euctfs2" value="2" checked)
