--- a/src/css/custom/components.styl
+++ b/src/css/custom/components.styl
@@ -173,31 +173,6 @@ table
 		display block
 		color rgba(6,6,6,0.43)
 
-
-
-	.reorder-btn
-		display: inline-block;
-		vertical-align: middle;
-		margin-left: .5rem;
-		width: 3rem;
-		height: 3rem;
-		border-radius: 2px;
-		cursor: pointer;
-		transition: .2s;
-		position: relative;
-		border-radius: 5px
-
-		&.asc
-			.icon-sort
-				background-image url("data:image/svg+xml;charset=utf8,%3Csvg width='25' height='25' viewBox='0 0 25 25' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1.5625 7.9375L2.66719 9.04219L5.46875 6.24062V22H7.03125V6.24062L9.83281 9.04219L10.9375 7.9375L6.25 3.25L1.5625 7.9375Z' fill='%232F2F2F'/%3E%3Cpath d='M23.4686 20.375H12.5311V21.9375H23.4686V20.375Z' fill='%232F2F2F'/%3E%3Cpath d='M20.3436 15.6875H12.5311V17.25H20.3436V15.6875Z' fill='%232F2F2F'/%3E%3Cpath d='M17.2186 11H12.5311V12.5625H17.2186V11Z' fill='%232F2F2F'/%3E%3C/svg%3E")
-
-		&.desc
-			.icon-sort
-				background-image: url("data:image/svg+xml;charset=utf8,%3Csvg width='25' height='25' viewBox='0 0 25 25' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1.5625 17.1875L2.66719 16.0828L5.46875 18.8844V3.125H7.03125V18.8844L9.83281 16.0828L10.9375 17.1875L6.25 21.875L1.5625 17.1875Z' fill='%232F2F2F'/%3E%3Cpath d='M23.4686 6.25H12.5311V4.6875H23.4686V6.25Z' fill='%232F2F2F'/%3E%3Cpath d='M20.3436 10.9375H12.5311V9.375H20.3436V10.9375Z' fill='%232F2F2F'/%3E%3Cpath d='M17.2186 15.625H12.5311V14.0625H17.2186V15.625Z' fill='%232F2F2F'/%3E%3C/svg%3E");
-
-		&:hover,&:focus
-			background-color: #e8e8e8
-
 	.icon-sort
 		position: absolute;
 		top: 50%;
@@ -281,7 +256,7 @@ table
 
 	&_current
 		font-weight: 700
-		transition: all .2s;
+		transition: color .2s;
 		text-overflow: ellipsis;
 		overflow: hidden;
 		white-space: nowrap;
@@ -315,7 +290,6 @@ table
 		z-index: 70;
 		background: #fff;
 		min-width: 100%;
-		transition: .1s;
 		box-shadow: 0 1px 12px 0 rgba(0, 0, 0, .15);
 		border-radius: 0 0 2px 2px;
 		max-height: 26rem;
@@ -497,16 +471,19 @@ table
 	top: -14px;
 	border-color: $tertiary-color;
 	border-width: 2px;
-	cursor pointer
+	cursor grab
 
 	&:before, &:after
 		display: none
 
-
 	&:focus
+	&:active
 		outline none
 		background $tertiary-color
 
 //slider active range
 .noUi-connect
 	background $tertiary-color
+
+.noUi-state-drag *
+	cursor grabbing !important
