--- a/src/css/custom/type.styl
+++ b/src/css/custom/type.styl
@@ -1,3 +1,21 @@
+@font-face
+	font-family: "Nunito"
+	src local('Nunito Regular'), local('Nunito-Regular'), url('Nunito-Regular.woff2')
+	font-weight 400
+	font-style normal
+
+@font-face
+	font-family: "Nunito"
+	src local('Nunito Bold'), local('Nunito-Bold'), url('Nunito-Bold.woff2')
+	font-weight 700
+	font-style normal
+
+@font-face
+	font-family: "Nunito"
+	src local('Nunito Regular Italic'), local('Nunito-Regular-Italic'), url('Nunito-Italic.woff2')
+	font-weight 400
+	font-style italic
+
 :root
 	font-family: $font-family
 	font-size: 15px
