--- a/public/init.css
+++ b/public/init.css
@@ -592,6 +592,24 @@ label {
 .form-group .button {
   margin-bottom: 0;
 }
+@font-face {
+  font-family: "Nunito";
+  src: local('Nunito Regular'), local('Nunito-Regular'), url("Nunito-Regular.woff2");
+  font-weight: 400;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Nunito";
+  src: local('Nunito Bold'), local('Nunito-Bold'), url("Nunito-Bold.woff2");
+  font-weight: 700;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Nunito";
+  src: local('Nunito Regular Italic'), local('Nunito-Regular-Italic'), url("Nunito-Italic.woff2");
+  font-weight: 400;
+  font-style: italic;
+}
 :root {
   font-family: 'Nunito', sans-serif;
   font-size: 15px;
