--- a/views/layouts/_layout.pug
+++ b/views/layouts/_layout.pug
@@ -2,6 +2,7 @@ doctype html
 html(lang='en')
   head
     block title
+    meta(charset="utf-8")
     link(rel='stylesheet' href='/init.css')
     script(src='/init.js' async)
   body
