--- a/views/includes/_foot.pug
+++ b/views/includes/_foot.pug
@@ -1,3 +1,3 @@
-|<script id="__bs_script__">//<![CDATA[
-|	document.write("<script async src='https://tagpro.dev:8000/browser-sync/browser-sync-client.js?v=2.26.14'><\/script>".replace("HOST", location.hostname));
-| 	//]]></script>
+// |<script id="__bs_script__">//<![CDATA[
+// |	document.write("<script async src='https://tagpro.dev:8000/browser-sync/browser-sync-client.js?v=2.26.14'><\/script>".replace("HOST", location.hostname));
+// | 	//]]></script>
