--- a/src/css/main.styl
+++ b/src/css/main.styl
@@ -40,8 +40,12 @@
 			font-size .85rem
 			padding-bottom 1rem
 
-
-
+	.map
+	.season
+		input[disabled]
+		input[disabled] + label
+			opacity .25
+			cursor not-allowed
 
 .compare-results
 	.set-head
