--- a/views/stats.pug
+++ b/views/stats.pug
@@ -1,5 +1,8 @@
 extends layouts/_layout.pug
 
+block nav-current
+	- var tab = 'player stats'
+
 block title
 	title #{title} - Tagpro.dev
 
@@ -7,15 +10,17 @@ block content
 	main#main
 		header
 
-			h2 Stats:
-				.drop-down.page-select
-					.drop-down_current(role="button")= title
+			h2.page-select= title
+				.drop-down
+					.drop-down_current(role="button")
+						span.button-fake.button-secondary
+							span Change
 						.drop-down_list
 							.mega-nav-wrap
 								nav
 									h2 General
 									ul
-										li(role="option")
+										li(role="option").active
 											a(href="/stats/summary-per-minute") Summary Per Minute
 										li(role="option")
 											a(href="/stats/wins") Wins
@@ -58,11 +63,15 @@ block content
 						ul.check-list
 							li(role="option")
 								.form_checkbox-wrapper
-									input(type="checkbox", name="season", id="season_euctfs2" value="2" checked)
+									input(type="checkbox", name="season", id="season_euctfs2" value="all" checked)
+									label(for="season_euctfs2") All
+							li(role="option")
+								.form_checkbox-wrapper
+									input(type="checkbox", name="season", id="season_euctfs2" value="2" disabled)
 									label(for="season_euctfs2") EU CTF S2
 							li(role="option")
 								.form_checkbox-wrapper
-									input(type="checkbox", name="season", id="season_euctfs1" value="1" checked)
+									input(type="checkbox", name="season", id="season_euctfs1" value="1" disabled)
 									label(for="season_euctfs1") EU CTF S1
 
 			.drop-down.elo
@@ -77,20 +86,16 @@ block content
 				.drop-down_label Filter by Map
 				.drop-down_current(role="button") All
 					.drop-down_list
-						ul
+						ul.check-list
 							li(role="option" class="filter-all")
 								.form_checkbox-wrapper
-									input(type="checkbox", name="checka", id="checka" checked)
-									label(for="checka") All Seasons
-							li(role="option")
-								.form_checkbox-wrapper
-									input(type="checkbox", name="checkb", id="checkb" )
-									label(for="checkb") CTF Season 2
-							li(role="option")
-								.form_checkbox-wrapper
-									input(type="checkbox", name="checkc", id="checkc")
-									label(for="checkc") CTF Season 1
-
+									input(type="checkbox" name="map" id="all" value="all" checked)
+									label(for="all") All
+							each raw in maps
+								li(role="option")
+									.form_checkbox-wrapper
+										input(type="checkbox", name="map", id='map_'+raw.id, value= raw.id, disabled)
+										label(for='map_'+raw.id)= raw.name
 
 			.filter-submit
 				button.button-secondary Apply
