--- a/src/css/custom/components.styl
+++ b/src/css/custom/components.styl
@@ -262,6 +262,7 @@ table
 		white-space: nowrap;
 		color: #2f2f2f;
 		padding: 2.5rem 1rem 1rem 1rem
+		width 215px
 
 		&:after
 			display: block;
