--- a/src/css/custom/components.styl
+++ b/src/css/custom/components.styl
@@ -19,8 +19,8 @@
 
 	header
 		padding 0.8rem 10px  0.1em 10px
-		//background linear-gradient(to top, #8a34e6, #a353f8)
-		background $tertiary-color
+		background linear-gradient(to top, #8a34e6, #a353f8)
+		// background $tertiary-color
 
 		h3
 			font-weight: 700
@@ -32,6 +32,7 @@
 
 	.top
 		background: $table-highlight;
+		background #8a34e6
 		color white
 		border-bottom none
 
