--- a/views/stats.pug
+++ b/views/stats.pug
@@ -20,39 +20,39 @@ block content
 								nav
 									h2 General
 									ul
-										li(role="option").active
-											a(href="/stats/summary-per-minute") Summary Per Minute
-										li(role="option")
+										li
 											a(href="/stats/wins") Wins
-										li(role="option")
+										li
+											a(href="/stats/summary-per-minute") Summary Per Minute
+										li
+											a(href="/stats/pups") Powerups
+										li
 											a(href="/stats/mercies") Mercies
 
 								nav
 									h2 Attacking
 									ul
-										li(role="option")
+										li
 											a(href="/stats/caps") Caps
-										li(role="option")
+										li
 											a(href="/stats/hold") Hold
-										li(role="option")
+										li
 											a(href="/stats/flaccids") Flaccids
 								nav
 									h2 Defence
 									ul
-										li(role="option")
+										li
 											a(href="/stats/prevent") Prevent
-										li(role="option")
+										li
 											a(href="/stats/returns") Returns
-										li(role="option")
+										li
 											a(href="/stats/key-returns") Key Returns
-										li(role="option")
+										li
 											a(href="/stats/quick-returns") Quick Returns
-										li(role="option")
+										li
 											a(href="/stats/tags") Tags
-										// li(role="option")
+										// li
 										// 	a(href="/stats/team-cap-from-my-prevent") Team Cap From My Prevent
-
-
 
 		.page-filter
 			.drop-down.season
@@ -100,7 +100,6 @@ block content
 
 			.filter-submit
 				button.button-secondary Apply
-
 
 		section
 			table.table-sticky
