--- a/views/stats.pug
+++ b/views/stats.pug
@@ -11,7 +11,7 @@ block content
 		header
 
 			h2.page-select= title
-				.drop-down
+				.drop-down(style="display:none")
 					.drop-down_current(role="button")
 						span.button-fake.button-secondary
 							span Change
