--- a/src/css/custom/components.styl
+++ b/src/css/custom/components.styl
@@ -70,6 +70,8 @@
 		font-size: .9rem;
 		text-align right
 		padding: 1.2rem 1.4rem 1.2rem .8rem;
+		border-top 1px solid $table-row-color
+
 		a
 			color: #37003c;
 			font-weight: 700;
