--- a/views/includes/_nav.pug
+++ b/views/includes/_nav.pug
@@ -3,7 +3,7 @@ aside#sidebar
 	nav#nav-main
 		ul
 			li
-				a(href="/" class=(tab === 'leaderboards' ? 'active' : '')) Leaderboards
+				a(href="/" class=(nav === 'leaderboards' ? 'active' : '')) Leaderboards
 
 			li
 				a(href="/stats/league-table" class=(nav === 'league-table' ? 'active' : '')) League Table
