--- a/public/init.css
+++ b/public/init.css
@@ -1192,6 +1192,7 @@ select + .error:before {
   font-size: 0.9rem;
   text-align: right;
   padding: 1.2rem 1.4rem 1.2rem 0.8rem;
+  border-top: 1px solid #e8e8e8;
 }
 .stats-card footer a {
   color: #37003c;
