--- a/views/includes/_nav.pug
+++ b/views/includes/_nav.pug
@@ -21,4 +21,4 @@ aside#sidebar
 				a(href="/stats/pups" class=(nav === 'powerups' ? 'active' : '')) Powerups
 
 			li
-				a(href="/stats/miscellaneous" class=(nav === 'misc' ? 'active' : '')) Miscellaneous
+				a(href="/stats/miscellaneous" class=(nav === 'miscellaneous' ? 'active' : '')) Miscellaneous
