--- a/views/log.pug
+++ b/views/log.pug
@@ -15,9 +15,12 @@ block content
 					tr
 						th EUID
 						th Date
+						th.text-c Season
 						th.text-c Average ELO
 						th.text-c Duration
-						th.text-c Season
+						th.text-c Red
+						th.text-c Blue
+						th.text-c Winner
 
 				tbody
 					each n, key in games
@@ -27,6 +30,9 @@ block content
 								a(href=`${href}`)= n.euid
 
 							td= n.date
+							td.text-c= n.season
 							td.text-c= n.elo
 							td.text-c= n.duration
-							td.text-c= n.season
+							td.text-c= n.red
+							td.text-c= n.blue
+							td.text-c= n.winner
