--- a/views/leaderboards.pug
+++ b/views/leaderboards.pug
@@ -75,7 +75,7 @@ block content
 								td.text-r= n.cap_every
 
 				footer
-					a(href="/stats/prevent") View full list
+					a(href="/stats/defending") View full list
 						span.icon
 
 			.stats-card
@@ -92,7 +92,7 @@ block content
 								td.text-r= n.cap_every
 
 				footer
-					a(href="/stats/caps") View full list
+					a(href="/stats/attacking") View full list
 						span.icon
 
 			.stats-card
@@ -109,7 +109,7 @@ block content
 								td.text-r= n.per_min
 
 				footer
-					a(href="/stats/hold") View full list
+					a(href="/stats/summary") View full list
 						span.icon
 
 			.stats-card
@@ -126,7 +126,7 @@ block content
 								td.text-r= n.return_every
 
 				footer
-					a(href="/stats/returns") View full list
+					a(href="/stats/defending") View full list
 						span.icon
 
 			.stats-card
@@ -143,7 +143,7 @@ block content
 								td.text-r= n.per_min
 
 				footer
-					a(href="/stats/prevent") View full list
+					a(href="/stats/summary") View full list
 						span.icon
 
 			.stats-card
@@ -160,7 +160,7 @@ block content
 								td.text-r= n.tag_every
 
 				footer
-					a(href="/stats/tags") View full list
+					a(href="/stats/summary") View full list
 						span.icon
 
 			.stats-card
@@ -177,5 +177,5 @@ block content
 								td.text-r= n.pop_every
 
 				footer
-					a(href="/stats/pop") View full list
+					a(href="/stats/summary") View full list
 						span.icon
