--- a/views/leaderboards.pug
+++ b/views/leaderboards.pug
@@ -1,12 +1,17 @@
 extends layouts/_layout.pug
 
 block title
-	title EU TPM Stats - Tagpro.dev
+	title= title
 
 block content
 	main#main
 		header
-			h2 CTF All-Time Leaderboards
+			h2= title
+
+			.tabs
+				a(href="/") All-Time
+				a(href="/?season=2") Season 2
+				a(href="/?season=1") Season 1
 
 		section.stats-card-wrapper
 
@@ -23,9 +28,9 @@ block content
 									| #{n.player}
 								td.text-r= n.win_ratio
 
-				footer
-					a(href="/stats/league-table") View full list
-						span.icon
+				// footer
+				// 	a(href="/stats/league-table") View full list
+				// 		span.icon
 
 			.stats-card
 				header
@@ -40,9 +45,9 @@ block content
 									| #{n.player}
 								td.text-r= n.pup_every
 
-				footer
-					a(href="/stats/pups") View full list
-						span.icon
+				// footer
+				// 	a(href="/stats/pups") View full list
+				// 		span.icon
 
 			.stats-card
 				header
@@ -57,9 +62,9 @@ block content
 									| #{n.player}
 								td.text-r= n.cap_every
 
-				footer
-					a(href="/stats/prevent") View full list
-						span.icon
+				// footer
+				// 	a(href="/stats/prevent") View full list
+				// 		span.icon
 
 			.stats-card
 				header
@@ -74,9 +79,9 @@ block content
 									| #{n.player}
 								td.text-r= n.cap_every
 
-				footer
-					a(href="/stats/defending") View full list
-						span.icon
+				// footer
+				// 	a(href="/stats/defending") View full list
+				// 		span.icon
 
 			.stats-card
 				header
@@ -91,9 +96,9 @@ block content
 									| #{n.player}
 								td.text-r= n.cap_every
 
-				footer
-					a(href="/stats/attacking") View full list
-						span.icon
+				// footer
+				// 	a(href="/stats/attacking") View full list
+				// 		span.icon
 
 			.stats-card
 				header
@@ -108,9 +113,9 @@ block content
 									| #{n.player}
 								td.text-r= n.per_min
 
-				footer
-					a(href="/stats/summary") View full list
-						span.icon
+				// footer
+				// 	a(href="/stats/summary") View full list
+				// 		span.icon
 
 			.stats-card
 				header
@@ -125,9 +130,9 @@ block content
 									| #{n.player}
 								td.text-r= n.return_every
 
-				footer
-					a(href="/stats/defending") View full list
-						span.icon
+				// footer
+				// 	a(href="/stats/defending") View full list
+				// 		span.icon
 
 			.stats-card
 				header
@@ -142,9 +147,9 @@ block content
 									| #{n.player}
 								td.text-r= n.per_min
 
-				footer
-					a(href="/stats/summary") View full list
-						span.icon
+				// footer
+				// 	a(href="/stats/summary") View full list
+				// 		span.icon
 
 			.stats-card
 				header
@@ -159,9 +164,9 @@ block content
 									| #{n.player}
 								td.text-r= n.tag_every
 
-				footer
-					a(href="/stats/summary") View full list
-						span.icon
+				// footer
+				// 	a(href="/stats/summary") View full list
+				// 		span.icon
 
 			.stats-card
 				header
@@ -176,6 +181,23 @@ block content
 									| #{n.player}
 								td.text-r= n.pop_every
 
-				footer
-					a(href="/stats/summary") View full list
-						span.icon
+				// footer
+				// 	a(href="/stats/summary") View full list
+				// 		span.icon
+
+			.stats-card
+				header
+					h3 Kill Death
+
+				table
+					tbody
+						each n, key in killdeath
+							tr(class=(key === 0 ? 'top' : ''))
+								td.rank
+									span.pos #{n.rank}.
+									| #{n.player}
+								td.text-r= n.killdeath
+
+				// footer
+				// 	a(href="/stats/summary") View full list
+				// 		span.icon
