--- a/views/includes/_nav.pug
+++ b/views/includes/_nav.pug
@@ -22,3 +22,6 @@ aside#sidebar
 
 			li
 				a(href="/stats/miscellaneous" class=(nav === 'miscellaneous' ? 'active' : '')) Miscellaneous
+
+			li
+				a(href="/records/v2" class=(nav === 'records' ? 'active' : '')) Records
