--- a/src/css/custom/layout.styl
+++ b/src/css/custom/layout.styl
@@ -143,6 +143,7 @@ body
 			&:hover, &.active
 				background $nav-sub-link-hover-bg
 
+
 .tabs
 	border-bottom 1px solid #e8e8e8
 	margin-bottom 1.5rem
@@ -161,3 +162,14 @@ body
 
 		&:not(.active):hover
 			opacity .6
+
+.stats-records
+	.stats-card .top
+		.pos, span
+			height: auto;
+			line-height: inherit;
+	.date
+		font-weight: 400
+	.text-r:last-child
+		font-weight: 700
+
