--- a/src/css/custom/type.styl
+++ b/src/css/custom/type.styl
@@ -47,7 +47,7 @@ a
 		text-decoration none
 	//accessibility
 	&:focus
-		box-shadow: 0 0 1px #222222
+		//box-shadow: 0 0 1px #222222
 
 ::selection
 	background-color: $selection-color
