--- a/views/recordsv2.pug
+++ b/views/recordsv2.pug
@@ -1,12 +1,9 @@
 extends layouts/_layout.pug
 
-block title
-	title= Records
-
 block content
 	main#main
 		header
-			h2 Records
+			h2 All-Time Records - Most Per Game
 
 		section.stats-card-wrapper.stats-records
 
@@ -15,55 +12,231 @@ block content
 					h3 Most Caps
 
 				table
+					thead
+						tr
+							th.text-l
+							th.text-l
+							th.text-l
+							th.text-c Every
+
 					tbody
 						each n, key in mostcaps
-							tr(class=(key === 0 ? 'top no-icon' : ''))
-								td.rank
-									span.pos #{n.rank}.
-									| #{n.player}
-								td.text-r=
-									span.text-i.date n.date
-									| n.cap
-
-
-			.stats-card
-				header
-					h3 Most Returns
-
-				table
-					tbody
-						each n, key in mostreturns
-							tr(class=(key === 0 ? 'top' : ''))
-								td.rank
-									span.pos #{n.rank}.
-									| #{n.player}
-								td.text-l= n.date
-								td.text-r= n.returns
+							tr
+								td.text-l.pos= n.rank
+								td.text-l.name= n.player
+								td.text-l.date
+									a(
+										href= 'https://tagpro.eu/?match=' + n.euid
+									)= n.date
+								td.text-c= n.cap
 
 			.stats-card
 				header
-					h3 Most Tags
+					h3 Most Powerups
 
 				table
+					thead
+						tr
+							th.text-l
+							th.text-l
+							th.text-l
+							th.text-c Every
+
 					tbody
-						each n, key in mosttags
-							tr(class=(key === 0 ? 'top' : ''))
-								td.rank
-									span.pos #{n.rank}.
-									| #{n.player}
-								td.text-l= n.date
-								td.text-r= n.tag
+						each n, key in mostpups
+							tr
+								td.text-l.pos= n.rank
+								td.text-l.name= n.player
+								td.text-l.date
+									a(
+										href= 'https://tagpro.eu/?match=' + n.euid
+									)= n.date
+								td.text-c= n.pup
+
+			.stats-card
+				header
+					h3 Most Tagpros
+
+				table
+					thead
+						tr
+							th.text-l
+							th.text-l
+							th.text-l
+							th.text-c Every
+
+					tbody
+						each n, key in mosttagpros
+							tr
+								td.text-l.pos= n.rank
+								td.text-l.name= n.player
+								td.text-l.date
+									a(
+										href= 'https://tagpro.eu/?match=' + n.euid
+									)= n.date
+								td.text-c= n.pup
+
+			.stats-card
+				header
+					h3 Most Hold
+
+				table
+					thead
+						tr
+							th.text-l
+							th.text-l
+							th.text-l
+							th.text-c Per Min
+
+					tbody
+						each n, key in mosthold
+							tr
+								td.text-l.pos= n.rank
+								td.text-l.name= n.player
+								td.text-l.date
+									a(
+										href= 'https://tagpro.eu/?match=' + n.euid
+									)= n.date
+								td.text-c= n.hold
+
+
 
 			.stats-card
 				header
 					h3 Most Grabs
 
 				table
+					thead
+						tr
+							th.text-l
+							th.text-l
+							th.text-l
+							th.text-c Every
+
 					tbody
 						each n, key in mostgrabs
-							tr(class=(key === 0 ? 'top' : ''))
-								td.rank
-									span.pos #{n.rank}.
-									| #{n.player}
-								td.text-l= n.date
-								td.text-r= n.grab
+							tr
+								td.text-l.pos= n.rank
+								td.text-l.name= n.player
+								td.text-l.date
+									a(
+										href= 'https://tagpro.eu/?match=' + n.euid
+									)= n.date
+								td.text-c= n.grab
+
+			.stats-card
+				header
+					h3 Most Prevent
+
+				table
+					thead
+						tr
+							th.text-l
+							th.text-l
+							th.text-l
+							th.text-c Per Min
+
+					tbody
+						each n, key in mostprevent
+							tr
+								td.text-l.pos= n.rank
+								td.text-l.name= n.player
+								td.text-l.date
+									a(
+										href= 'https://tagpro.eu/?match=' + n.euid
+									)= n.date
+								td.text-c= n.prevent
+
+			.stats-card
+				header
+					h3 Most Returns
+
+				table
+					thead
+						tr
+							th.text-c
+							th.text-l
+							th.text-l
+							th.text-c Every
+
+					tbody
+						each n, key in mostreturns
+							tr
+								td.text-l.pos= n.rank
+								td.text-l.name= n.player
+								td.text-l.date
+									a(
+										href= 'https://tagpro.eu/?match=' + n.euid
+									)= n.date
+								td.text-c= n.returns
+
+			.stats-card
+				header
+					h3 Most Quick Returns
+
+				table
+					thead
+						tr
+							th.text-c
+							th.text-l
+							th.text-l
+							th.text-c Every
+
+					tbody
+						each n, key in mostquickreturns
+							tr
+								td.text-l.pos= n.rank
+								td.text-l.name= n.player
+								td.text-l.date
+									a(
+										href= 'https://tagpro.eu/?match=' + n.euid
+									)= n.date
+								td.text-c= n.quickreturns
+
+			.stats-card
+				header
+					h3 Most Key Returns
+
+				table
+					thead
+						tr
+							th.text-c
+							th.text-l
+							th.text-l
+							th.text-c Every
+
+					tbody
+						each n, key in mostkeyreturns
+							tr
+								td.text-l.pos= n.rank
+								td.text-l.name= n.player
+								td.text-l.date
+									a(
+										href= 'https://tagpro.eu/?match=' + n.euid
+									)= n.date
+								td.text-c= n.keyreturns
+
+
+
+			.stats-card
+				header
+					h3 Most Tags
+
+				table
+					thead
+						tr
+							th.text-c
+							th.text-l
+							th.text-l
+							th.text-c Every
+
+					tbody
+						each n, key in mosttags
+							tr
+								td.text-l.pos= n.rank
+								td.text-l.name= n.player
+								td.text-l.date
+									a(
+										href= 'https://tagpro.eu/?match=' + n.euid
+									)= n.date
+								td.text-c= n.tag
