--- a/public/init.css
+++ b/public/init.css
@@ -1278,7 +1278,7 @@ table th.sort.sort-desc span:after {
 table tbody tr:not(:last-child) {
   border-bottom: 1px solid #e8e8e8;
 }
-table tbody tr:not(.top):hover td {
+table tbody tr:not(.top):hover {
   background-color: #fef7ff;
 }
 table tbody td {
@@ -1866,6 +1866,9 @@ body {
   background: #8b35e7;
   color: #c2adff;
   font-size: 0.8rem;
+}
+.stats-records tbody tr:hover {
+  background: #000;
 }
 .stats-records tbody tr td {
   padding: 0.5rem 0;
