--- a/views/includes/_nav.pug
+++ b/views/includes/_nav.pug
@@ -24,4 +24,4 @@ aside#sidebar
 				a(href="/stats/miscellaneous" class=(nav === 'miscellaneous' ? 'active' : '')) Miscellaneous
 
 			li
-				a(href="/records/v2" class=(nav === 'records' ? 'active' : '')) Records
+				a(href="/records" class=(nav === 'records' ? 'active' : '')) Records
