--- a/views/records.pug
+++ b/views/records.pug
@@ -1,92 +1,245 @@
 extends layouts/_layout.pug
 
 block title
-	title Records
+	title All-Time Records Per Game
 
 block content
 	main#main
 		header
-			h2 Records
+			h2 All-Time Records Per Game
 
-			ul
-				li.game
-					.key Longest Game
-					.value
-						a(
-							href= 'https://tagpro.eu/?match=' + longestgame.euid
-						)
-							span= longestgame.time + ' on ' + longestgame.map + ' (' + longestgame.date + ')'
+		section.stats-card-wrapper.stats-records
 
-						// .red
-						// 	.players
-						// 		p Red:
-						// 			each n, key in longestgame.players
-						// 				if(n.team === 1)
-						// 					span= n.name + ', '
+			.stats-card
+				header
+					h3 Most Caps
 
-						// .blue
-						// 	.players
-						// 		p Blues:
-						// 		each n, key in longestgame.players
-						// 			if(n.team === 2)
-						// 				span= n.name
+				table
+					thead
+						tr
+							th.text-l
+							th.text-l
+							th.text-l
+							th.text-c Every
 
-				li.game
-					.key Shortest Game
-					.value
-						a(
-							href= 'https://tagpro.eu/?match=' + shortestgame.euid
-						)
-							span= shortestgame.time + ' on ' + shortestgame.map + ' (' + shortestgame.date + ')'
+					tbody
+						each n, key in mostcaps
+							tr
+								td.text-l.pos= n.rank
+								td.text-l.name= n.player
+								td.text-l.date
+									a(
+										href= 'https://tagpro.eu/?match=' + n.euid
+									)= n.date
+								td.text-c= n.cap
 
-				li.game
-					.key Highest ELO Game
-					.value
-						a(
-							href= 'https://tagpro.eu/?match=' + highestelogame.euid
-						)
-							span= highestelogame.elo + ' ELO on ' + longestgame.map + ' (' + highestelogame.date + ')'
+			.stats-card
+				header
+					h3 Most Powerups
 
-				li.game
-					.key Lowest ELO Game
-					.value
-						a(
-							href= 'https://tagpro.eu/?match=' + lowestelogame.euid
-						)
-							span= lowestelogame.elo + ' ELO on ' + lowestelogame.map + ' (' + lowestelogame.date + ')'
+				table
+					thead
+						tr
+							th.text-l
+							th.text-l
+							th.text-l
+							th.text-c Every
+
+					tbody
+						each n, key in mostpups
+							tr
+								td.text-l.pos= n.rank
+								td.text-l.name= n.player
+								td.text-l.date
+									a(
+										href= 'https://tagpro.eu/?match=' + n.euid
+									)= n.date
+								td.text-c= n.pup
+
+			.stats-card
+				header
+					h3 Most Tagpros
+
+				table
+					thead
+						tr
+							th.text-l
+							th.text-l
+							th.text-l
+							th.text-c Every
+
+					tbody
+						each n, key in mosttagpros
+							tr
+								td.text-l.pos= n.rank
+								td.text-l.name= n.player
+								td.text-l.date
+									a(
+										href= 'https://tagpro.eu/?match=' + n.euid
+									)= n.date
+								td.text-c= n.pup
+
+			.stats-card
+				header
+					h3 Most Hold
+
+				table
+					thead
+						tr
+							th.text-l
+							th.text-l
+							th.text-l
+							th.text-c Per Min
+
+					tbody
+						each n, key in mosthold
+							tr
+								td.text-l.pos= n.rank
+								td.text-l.name= n.player
+								td.text-l.date
+									a(
+										href= 'https://tagpro.eu/?match=' + n.euid
+									)= n.date
+								td.text-c= n.hold
 
 
-				li.map
-					.key Most Picked Map
-					.value
-						span= mostpickedmap.map + ' ' + mostpickedmap.total + ' times'
 
-				li.map
-					.key Average ELO
-					.value
-						span= averageelo.elo
+			.stats-card
+				header
+					h3 Most Grabs
+
+				table
+					thead
+						tr
+							th.text-l
+							th.text-l
+							th.text-l
+							th.text-c Every
+
+					tbody
+						each n, key in mostgrabs
+							tr
+								td.text-l.pos= n.rank
+								td.text-l.name= n.player
+								td.text-l.date
+									a(
+										href= 'https://tagpro.eu/?match=' + n.euid
+									)= n.date
+								td.text-c= n.grab
+
+			.stats-card
+				header
+					h3 Most Prevent
+
+				table
+					thead
+						tr
+							th.text-l
+							th.text-l
+							th.text-l
+							th.text-c Per Min
+
+					tbody
+						each n, key in mostprevent
+							tr
+								td.text-l.pos= n.rank
+								td.text-l.name= n.player
+								td.text-l.date
+									a(
+										href= 'https://tagpro.eu/?match=' + n.euid
+									)= n.date
+								td.text-c= n.prevent
+
+			.stats-card
+				header
+					h3 Most Returns
+
+				table
+					thead
+						tr
+							th.text-c
+							th.text-l
+							th.text-l
+							th.text-c Every
+
+					tbody
+						each n, key in mostreturns
+							tr
+								td.text-l.pos= n.rank
+								td.text-l.name= n.player
+								td.text-l.date
+									a(
+										href= 'https://tagpro.eu/?match=' + n.euid
+									)= n.date
+								td.text-c= n.returns
+
+			.stats-card
+				header
+					h3 Most Quick Returns
+
+				table
+					thead
+						tr
+							th.text-c
+							th.text-l
+							th.text-l
+							th.text-c Every
+
+					tbody
+						each n, key in mostquickreturns
+							tr
+								td.text-l.pos= n.rank
+								td.text-l.name= n.player
+								td.text-l.date
+									a(
+										href= 'https://tagpro.eu/?match=' + n.euid
+									)= n.date
+								td.text-c= n.quickreturns
+
+			.stats-card
+				header
+					h3 Most Key Returns
+
+				table
+					thead
+						tr
+							th.text-c
+							th.text-l
+							th.text-l
+							th.text-c Every
+
+					tbody
+						each n, key in mostkeyreturns
+							tr
+								td.text-l.pos= n.rank
+								td.text-l.name= n.player
+								td.text-l.date
+									a(
+										href= 'https://tagpro.eu/?match=' + n.euid
+									)= n.date
+								td.text-c= n.keyreturns
 
 
 
+			.stats-card
+				header
+					h3 Most Tags
 
+				table
+					thead
+						tr
+							th.text-c
+							th.text-l
+							th.text-l
+							th.text-c Every
 
-
-
-
-
-
-				li.map
-					.key Most Prevent in a Game
-					.value
-						a(
-							href= 'https://tagpro.eu/?match=' + mostprevent.euid
-						)
-							span= mostprevent.name + ' had ' + mostprevent.prevent + ' prevent ' + ' (' + mostprevent.date + ')'
-
-				li.map
-					.key Most Powerups in a Game
-					.value
-						a(
-							href= 'https://tagpro.eu/?match=' + mostpups.euid
-						)
-							span= mostpups.name + ' won ' + mostpups.pups + ' pups ' + ' (' + mostpups.date + ')'
+					tbody
+						each n, key in mosttags
+							tr
+								td.text-l.pos= n.rank
+								td.text-l.name= n.player
+								td.text-l.date
+									a(
+										href= 'https://tagpro.eu/?match=' + n.euid
+									)= n.date
+								td.text-c= n.tag
