--- a/views/includes/_nav.pug
+++ b/views/includes/_nav.pug
@@ -23,5 +23,11 @@ aside#sidebar
 			li
 				a(href="/stats/miscellaneous" class=(nav === 'miscellaneous' ? 'active' : '')) Miscellaneous
 
+			//- li
+			//- a(href="/compare" class=(nav === 'compare' ? 'active' : '')) Player Comparison
+
 			li
 				a(href="/records" class=(nav === 'records' ? 'active' : '')) Records
+
+			//-li
+			//-	a(href="/log" class=(nav === 'log' ? 'active' : '')) Recent Games - Log
