--- a/views/records.pug
+++ b/views/records.pug
@@ -12,7 +12,7 @@ block content
 
 			.stats-card
 				header
-					h3 Most Caps
+					h3 Caps
 
 				table
 					thead
@@ -35,7 +35,7 @@ block content
 
 			.stats-card
 				header
-					h3 Most Powerups
+					h3 Powerups
 
 				table
 					thead
@@ -58,7 +58,7 @@ block content
 
 			.stats-card
 				header
-					h3 Most Tagpros
+					h3 Tagpros
 
 				table
 					thead
@@ -81,7 +81,7 @@ block content
 
 			.stats-card
 				header
-					h3 Most Hold
+					h3 Hold
 
 				table
 					thead
@@ -106,7 +106,7 @@ block content
 
 			.stats-card
 				header
-					h3 Most Grabs
+					h3 Grabs
 
 				table
 					thead
@@ -129,7 +129,7 @@ block content
 
 			.stats-card
 				header
-					h3 Most Prevent
+					h3 Prevent
 
 				table
 					thead
@@ -152,7 +152,7 @@ block content
 
 			.stats-card
 				header
-					h3 Most Returns
+					h3 Returns
 
 				table
 					thead
@@ -175,7 +175,7 @@ block content
 
 			.stats-card
 				header
-					h3 Most Quick Returns
+					h3 Quick Returns
 
 				table
 					thead
@@ -198,7 +198,7 @@ block content
 
 			.stats-card
 				header
-					h3 Most Key Returns
+					h3 Key Returns
 
 				table
 					thead
@@ -223,7 +223,7 @@ block content
 
 			.stats-card
 				header
-					h3 Most Tags
+					h3 Tags
 
 				table
 					thead
